2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add extensive testing for matrix/vector wrapper

2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add first support for boost matrix/vector library

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* move experimental branch to new trunk location in orocos repository

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* update documentation for new build system. see bfl/docs/installation_guide.tex

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Finished porting BFL to cmake build system
	
2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Replace the tests in the src folder with the cppunit tests in
	the bfl/tests folder
	* Replace the tests in the src folder with the examples in the
	bfl/examples folder
	
2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Add the examples of the getting started guide to the BFL trunk
	(Klaas should be happy now :-)


2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Moved the matrixWrapper into the BFL build system. The namespace
	MatrixWrapper was kept however for backwards compatibility
	
2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* replace all checks and cerr messages by assert
	info, see <https://www.fmtc.be/orocos-bugzilla/show_bug.cgi?id=331>

2007-05-03  Klaas Gadeyne  <first dot last at fmtc dot be>

	* README and INSTALL: Remove references to scythe and update boost
	info, see <https://www.fmtc.be/orocos-bugzilla/show_bug.cgi?id=297>

2007-05-02  Tinne De Laet  <first dot last at mech dot kuleuven dot be>

	* tests/model_test.*: added testLinearAnalytic MeasurementModelGaussianUncertainty 
	* src/model/linearanalyticmeasurementmodel_gaussianuncertainty.h: removed
	typo from comment

2007-05-01  Tinne De Laet  <first dot last at mech dot kuleuven dot be>
