@@ -1,3 +1,6 @@
+2007-05-11  Wim Meeussen <first dot last at mech dot kuleuven dot be>
+	* Scythe support re-activated
+
 2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
 	* add extensive testing for matrix/vector wrapper
 
